<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Project Coordinates -->
    <groupId>info.jab.cis194</groupId>
    <artifactId>cis194</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <!-- Properties -->
    <properties>
        <!-- Core build properties -->
        <java.version>25</java.version>
        <maven.version>3.9.10</maven.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Dependency versions -->
        <junit.version>5.11.0</junit.version>
        <assertj.version>3.26.3</assertj.version>

        <!-- Maven plugin versions -->
        <maven-plugin-compiler.version>3.14.0</maven-plugin-compiler.version>
        <maven-plugin-surefire.version>3.5.4</maven-plugin-surefire.version>
        <maven-plugin-failsafe.version>3.5.3</maven-plugin-failsafe.version>
        <maven-plugin-enforcer.version>3.5.0</maven-plugin-enforcer.version>
        <maven-plugin-clean.version>3.4.0</maven-plugin-clean.version>
        <maven-plugin-resources.version>3.3.1</maven-plugin-resources.version>
        <maven-plugin-jar.version>3.4.2</maven-plugin-jar.version>
        <maven-plugin-install.version>3.1.3</maven-plugin-install.version>
        <maven-plugin-deploy.version>3.1.3</maven-plugin-deploy.version>
        <maven-plugin-site.version>3.20.0</maven-plugin-site.version>

        <!-- Additional plugin versions for selected features -->
        <maven-plugin-jxr.version>3.6.0</maven-plugin-jxr.version>
        <maven-plugin-spotless.version>2.44.5</maven-plugin-spotless.version>
        <maven-plugin-versions.version>2.18.0</maven-plugin-versions.version>
        <extra-enforcer-rules.version>1.9.0</extra-enforcer-rules.version>
    </properties>

    <!-- Dependency Management -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Dependencies -->
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Optionally: parameterized tests support -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- AssertJ fluent assertions -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- Build Configuration -->
    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-plugin-compiler.version}</version>
                <configuration>
                    <release>${java.version}</release>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Maven Enforcer Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-plugin-enforcer.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>extra-enforcer-rules</artifactId>
                        <version>${extra-enforcer-rules.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <rules>
                                <banCircularDependencies />
                                <dependencyConvergence />
                                <banDuplicatePomDependencyVersions />
                                <requireMavenVersion>
                                    <version>${maven.version}</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>${java.version}</version>
                                </requireJavaVersion>
                                <bannedDependencies>
                                    <excludes>
                                        <exclude>org.projectlombok:lombok</exclude>
                                    </excludes>
                                </bannedDependencies>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Maven Surefire Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-plugin-surefire.version}</version>
                <configuration>
                    <skipAfterFailureCount>1</skipAfterFailureCount>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/*IT.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- Maven Failsafe Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-plugin-failsafe.version}</version>
                <configuration>
                    <includes>
                        <include>**/*IT.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/*Test.java</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Spotless Code Formatting Plugin -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${maven-plugin-spotless.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <java>
                        <removeUnusedImports />
                        <importOrder>
                            <order>,\#</order>
                        </importOrder>
                        <endWithNewline />
                        <trimTrailingWhitespace />
                        <indent>
                            <spaces>true</spaces>
                            <spacesPerTab>4</spacesPerTab>
                        </indent>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>

            <!-- Versions Maven Plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${maven-plugin-versions.version}</version>
                <configuration>
                    <allowSnapshots>false</allowSnapshots>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- Reporting Configuration -->
    <reporting>
        <plugins>
            <!-- Generates HTML test reports -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${maven-plugin-surefire.version}</version>
                <configuration>
                    <outputName>junit-report</outputName>
                    <showSuccess>true</showSuccess>
                </configuration>
            </plugin>

            <!-- Adds links to source code in reports -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${maven-plugin-jxr.version}</version>
            </plugin>
        </plugins>
    </reporting>

</project>
